--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 <html>
   <style>
     body {
-    background-image: url("https://www.freepik.com/free-vector/memphis-blue-background-with-halftone-line-elements_18309234.htm#query=background&position=7&from_view=keyword&track=sph");
+    background-image: url("bgimage.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
