--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,8 @@
     body {
     background-image:url("bgimage.jpg");
     background-repeat: no-repeat;
+    background-position: center; 
+    background-attachment: fixed;
     background-size: cover;
     margin: 0;
     padding: 0;
