--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,46 +2,47 @@
 <html>
   <style>
     body {
-    background-image:url("bgimage.jpg");
-    background-repeat: no-repeat;
-    background-position: center; 
-    background-attachment: fixed;
-    background-size: cover;
-    margin: 0;
-    padding: 0;
-    font-family: "Georgia", sans-serif;
-}
+      background-color: pink;
+      background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnOL6OUzTCBHsCQWm8laQvOb8loJWYQUpUQ_O91VKBug&s");g");
+      background-repeat: no-repeat;
+      background-position: center; 
+      background-attachment: fixed;
+      background-size: cover;
+      margin: 0;
+      padding: 0;
+      font-family: "Georgia", sans-serif;
+    }
 
-h1 {
-    text-align: center;
-    background-color: #ff69b4;
-    color: #fff;
-    border: 2px dotted #401596;
-	padding: 10px 15px;
-    width: 250px;
-    margin: 30px 20px 20px 20px;
-    auto margin: 0 ;
-}
+    h1 {
+      text-align: center;
+      background-color: #ff69b4;
+      color: #fff;
+      border: 2px dotted #401596;
+    	padding: 10px 15px;
+      width: 250px;
+      margin: 30px 20px 20px 20px;
+      auto margin: 0 ;
+    }
 
-p {
-    text-align: justify;
-    background-color: #fff;
-    font-style: italic;
-    padding: 20px;
-    border: 3px solid #ff1493;
-    border-left: 3px solid black;
-    border-right: 3px double black;
-    border-top: 3px dashed black;
-    border-bottom: 3px dotted black;
-    width: 500px;
-    margin: 0 20px;
-}
+    p {
+      text-align: justify;
+      background-color: #fff;
+      font-style: italic;
+      padding: 20px;
+      border: 3px solid #ff1493;
+      border-left: 3px solid black;
+      border-right: 3px double black;
+      border-top: 3px dashed black;
+      border-bottom: 3px dotted black;
+      width: 500px;
+      margin: 0 20px;
+    }
 
-span {
-    font-weight: bold;
-    font-style: italic;
-    color: #ff69b4;
-    margin: 2px 5px;
-}
+    span {
+      font-weight: bold;
+      font-style: italic;
+      color: #ff69b4;
+      margin: 2px 5px;
+    }
   </style>
 </html>
