--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
     body {
       background-color: pink;
-      background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnOL6OUzTCBHsCQWm8laQvOb8loJWYQUpUQ_O91VKBug&s");g");
+      background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnOL6OUzTCBHsCQWm8laQvOb8loJWYQUpUQ_O91VKBug&s");
       background-repeat: no-repeat;
       background-position: center; 
       background-attachment: fixed;
